# AdventOfCode

./: .gitignore  2025_timings.md  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AdventOfCode.sln  AdventOfCode_OLD.sln  AoC.sln  CMakeCache.txt  CMakeLists.txt  GenerateSolutions.bat  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  TracyTargets.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
01/: 01.csproj  AocHost.cs  title.txt
03/: AocHost.cs  Solver.cs
04/: AocHost.cs  Solver.cs
05/: Solver.cs
06/: 06.csproj  AocHost.cs
07/: AocHost.cs
2016_12/: 2016_12.sln  AocHost.cs  Solver.cs  title.txt
2016_13/: 2016_13.csproj  2016_13.sln  AocHost.cs  Solver.cs  SpanTypes.cs  test.txt  title.txt
2016_14/: AocHost.cs  Solver.cs  title.txt
2025_01/: AocHost.cs  Solver.cs
2025_02/: AocHost.cs  Solver.cs
2025_03/: 2025_03.csproj  AocHost.cs  Solver.cs
2025_04/: AocHost.cs  Solver.cs
2025_05/: AocHost.cs  Solver.cs
2025_06/: AocHost.cs  Solver.cs  title.txt
2025_07/: AocHost.cs  Solver.cs
2025_08/: 2025_08.csproj  AocHost.cs  Solver.cs
2025_09/: AocHost.cs  Solver.cs
2025_10/: AocHost.cs  Solver.cs
2025_11/: AocHost.cs  Solver.cs  SpanTypes.cs
2025_12/: AocHost.cs  Solver.cs  title.txt
A3A/: A3A_DESIGN.md
AOC/: AdventOfCode.csproj
AOC_OLD/: AdventOfCode.csproj
AdventOfCode2015/: Program.cs
AdventOfCode2023/: AdventOfCode2023.csproj  CC.cs  Day7.cs  Day8.cs  Day9.cs  Day_.cs  Log.cs  OtherExtentions.cs  Program.cs  StringExtentions.cs
AdventOfCode2024/: AActor.cpp  AActor.h  AComponent.h  AdventOfCode2024.vcxproj  AdventOfCode2024.vcxproj.filters  AoC2024.cpp  AoC2024.h  AoCBase.cpp  AoCBase.h  AoCBaseWithD3D.cpp  AoCBaseWithD3D.h  AoCBaseWithWindow.cpp  AoCBaseWithWindow.h  AoCVisualizer.cpp  AoCVisualizer.h  AoC_2024_01.cpp  AoC_2024_01.h  AoC_2024_02.cpp  AoC_2024_02.h  AoC_2024_03.cpp  AoC_2024_03.h  AoC_2024_04.cpp  AoC_2024_04.h  AoC_2024_05.cpp  AoC_2024_05.h  AoC_2024_06.cpp  AoC_2024_06.h  AoC_2024_07.cpp  AoC_2024_07.h  AoC_2024_08.cpp  AoC_2024_08.h  AoC_2024_09.cpp  AoC_2024_09.h  AoC_2024_10.cpp  AoC_2024_10.h  AoC_2024_11.cpp  AoC_2024_11.h  AoC_2024_12.cpp  AoC_2024_12.h  AoC_2024_13.cpp  (+37 more)
AdventOfCodeUWP/: AdventOfCodeUWP.csproj
AdventOfCodeVisualizer/: AocVis.cs  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
AdventOfCodeVisualizerWPF/: AocVis.cs  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  packages.config
AdventOfCodeVisualizerWinUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  appsettings.json
AmaAocHelpers/: Log.cs
AoC.Core/: AoC.Core.csproj  Grid`.cs  Map`.cs  RegexCapture.cs  RegexGroup.cs  RegexMatch.cs  RegexMatchCollectionObjectSource.cs  RegexMatchObjectSource.cs  StepPred.cs  Traveller.cs
AoC.Solutions/: AoC.Solutions.csproj  Program.cs
AoC.Visualizers/: AoC.Visualizers.csproj  Command1.cs  ExtensionEntrypoint.cs
AoC_DX12_V/src/2024/: 2024.vcxproj  2024.vcxproj.filters  AoC_Common.vcxproj  AoC_Common.vcxproj.filters  CMakeLists.txt  Day_01.cpp  Days.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  copied_common_config.vcxproj  stdafx.cpp  stdafx.h
AoC_DX12_V/src/2024/2024.dir/MinSizeRel/: 2024.lib.recipe
AoC_DX12_V/src/2024/2024.dir/MinSizeRel/2024.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
AoC_DX12_V/src/2024/2024.dir/MinSizeRel/microsoft/STL/: std.compat.ixx.ifc.dt.d.json  std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.d.json  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
AoC_DX12_V/src/2024/Days 1-5/: Day 01.cpp  Day 01.h  Day 02.cpp  Day 02.h  Day 03.cpp  Day 03.h  Day 04.cpp  Day 04.h  Day 05.cpp  Day 05.h  Day_01.cpp  Day_02.cpp  Day_04.cpp
AoC_DX12_V/src/2024/Days 11-15/: Day 11.cpp  Day 11.h  Day 12.cpp  Day 12.h  Day 13.cpp  Day 13.h  Day 14.cpp  Day 14.h  Day 15.cpp  Day 15.h
AoC_DX12_V/src/2024/Days 16-20/: Day 16.cpp  Day 16.h  Day 17.cpp  Day 17.h  Day 18.cpp  Day 18.h  Day 19.cpp  Day 19.h  Day 20.cpp  Day 20.h
AoC_DX12_V/src/2024/Days 21-25/: Day 21.cpp  Day 21.h  Day 22.cpp  Day 22.h  Day 23.cpp  Day 23.h  Day 24.cpp  Day 24.h  Day 25.cpp  Day 25.h
AoC_DX12_V/src/2024/Days 6-10/: Day 06.cpp  Day 06.h  Day 07.cpp  Day 07.h  Day 08.cpp  Day 08.h  Day 09.cpp  Day 09.h  Day 10.cpp  Day 10.h
AoC_DX12_V/src/2024/MinSizeRel/: 2024.lib
AoC_DX12_V/src/Common/: AoCBase.h  AoCBase.hpp  AoCConfiguration.cpp  AoCConfiguration.h  AoCConfiguration.hpp  AoCExecutor.cpp  AoCExecutor.h  AoCResultsAggregator.h  AoC_Common.json  AoC_Common.vcxproj  AoC_Common.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  aoc.h  base.h  cmake_install.cmake  copied_common_config.vcxproj.filters  stdafx.h
AoC_DX12_V/src/Common/AoC_Common.dir/MinSizeRel/: AoC_Common.dll.recipe  AoC_Common.lib.recipe
AoC_DX12_V/src/Common/AoC_Common.dir/MinSizeRel/AoC_Common.tlog/: AoC_Common.lastbuildstate  CL.19580.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
AoC_DX12_V/src/Common/AoC_Common.dir/MinSizeRel/microsoft/STL/: std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
AoC_DX12_V/src/Common/MinSizeRel/: AoC_Common.exp  AoC_Common.lib
AoC_DX12_V/src/DX12/: AoC_DX12.vcxproj  AoC_DX12.vcxproj.filters  CMakeLists.txt  GLTFSample.cpp  GLTFSample.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  Renderer.cpp  RunDays.cpp  UI.cpp  cmake_install.cmake  stdafx.h
AoC_DX12_V/src/DX12/AoC_DX12.dir/MinSizeRel/: AoC_DX12.exe.recipe  Cauldron_Common.res
AoC_DX12_V/src/VK/: AoC_VK.vcxproj  AoC_VK.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
(+992 files in other folders)
